Bug 1167306 - Fix preprocessor goof that disabled the load manager and some preference handling. r=jesup, a=sledru

--HG--
extra : transplant_source : %5C%3D%1C%B2%10%DADQ%FB%29%AB%98%BE%E5%06%BBl0%F7p